--- a/01-Blackjack/index.html
+++ b/01-Blackjack/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>01-Blackjack</title>
+
+    <!-- This link imports our css style sheet -->
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- This give us access to the Bootstrap classes -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
+    <header class="title">01-Blackjack</header>
+
+    <!-- It is a good practice place the load of JS script at the bottom -->
     <script src="assets/js/game.js"></script>
-    
 </body>
 </html>
