--- a/01-Blackjack/index.html
+++ b/01-Blackjack/index.html
@@ -5,16 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>01-Blackjack</title>
 
+    <!-- This give us access to the Bootstrap classes, it is important order links correctly -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- This link imports our css style sheet -->
     <link rel="stylesheet" href="assets/css/styles.css">
-    <!-- This give us access to the Bootstrap classes -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
-    <header class="title">01-Blackjack</header>
+    <header class="my-title">01-Blackjack</header>
+
+    <!-- Buttons -->
+    <div class="row mt-2">
+        <div class="col text-center">
+            <button class="btn btn-danger">New Game</button>
+            <button class="btn btn-primary">Card</button>
+            <button class="btn btn-primary">End Game</button>
+        </div>
+    </div>
+
+    <!-- Player cards container -->
+    <div class="row container">
+        <div class="col">
+            <h1>Player - <span>0</span></h1>
+            <div id="player-cards">
+                <img class="card-style" src="assets/cards/2C.png">
+                <img class="card-style" src="assets/cards/2C.png">
+                <img class="card-style" src="assets/cards/2C.png">
+            </div>
+        </div>
+    </div>
+
+    <!-- Computer cards container -->
+    <div class="row container">
+        <div class="col">
+            <h1>Computer - <span>0</span></h1>
+            <div id="computer-cards">
+                <img class="card-style" src="assets/cards/2C.png">
+                <img class="card-style" src="assets/cards/2C.png">
+                <img class="card-style" src="assets/cards/2C.png">
+            </div>
+        </div>
+    </div>
 
     <!-- It is a good practice place the load of JS script at the bottom -->
     <script src="assets/js/game.js"></script>
+
 </body>
 </html>
