underscore js imported and takeCard function created

--- a/01-Blackjack/index.html
+++ b/01-Blackjack/index.html
@@ -48,6 +48,7 @@
     </div>
 
     <!-- It is a good practice place the load of JS script at the bottom -->
+    <script src="assets/js/underscore-min.js"></script>
     <script src="assets/js/game.js"></script>
 
 </body>
