cardValue and events

--- a/01-Blackjack/index.html
+++ b/01-Blackjack/index.html
@@ -17,9 +17,9 @@
     <!-- Buttons -->
     <div class="row mt-2">
         <div class="col text-center">
-            <button class="btn btn-danger">New Game</button>
-            <button class="btn btn-primary">Card</button>
-            <button class="btn btn-primary">End Game</button>
+            <button id="btnNewGame" class="btn btn-danger">New Game</button>
+            <button id="btnTakeCard" class="btn btn-primary">Card</button>
+            <button id="btnEndGame" class="btn btn-primary">End Game</button>
         </div>
     </div>
 
