event takeCard created and images inserted on html

--- a/01-Blackjack/index.html
+++ b/01-Blackjack/index.html
@@ -26,10 +26,8 @@
     <!-- Player cards container -->
     <div class="row container">
         <div class="col">
-            <h1>Player - <span>0</span></h1>
-            <div id="player-cards">
-                <img class="card-style" src="assets/cards/2C.png">
-                <img class="card-style" src="assets/cards/2C.png">
+            <h1>Player - <span id="playerPoints">0</span></h1>
+            <div id="playerCards">
                 <img class="card-style" src="assets/cards/2C.png">
             </div>
         </div>
@@ -38,10 +36,8 @@
     <!-- Computer cards container -->
     <div class="row container">
         <div class="col">
-            <h1>Computer - <span>0</span></h1>
-            <div id="computer-cards">
-                <img class="card-style" src="assets/cards/2C.png">
-                <img class="card-style" src="assets/cards/2C.png">
+            <h1>Computer - <span id="computerPoints">0</span></h1>
+            <div id="computerCards">
                 <img class="card-style" src="assets/cards/2C.png">
             </div>
         </div>
